Fixing font-size on smaller screens

--- a/css/resumeStyles.css
+++ b/css/resumeStyles.css
@@ -12,6 +12,12 @@ li{
 	display: grid;
 	grid-template-columns: auto;
 	grid-template-rows: auto auto auto;
+}
+
+@media screen and (max-width: 480px){
+	li{
+		font-size: 0.8em;
+	}
 }*/
 
 body{
@@ -43,4 +49,10 @@ li{
 #content-container > *:nth-child(3){
 	-ms-grid-row: 3;
 	-ms-grid-column: 1;
+}
+
+@media screen and (max-width: 480px){
+	li{
+		font-size: 0.8em;
+	}
 }
